# disaster-resource-allocation

./: .gitignore  Makefile  README.md  start_all.py
DataIngestion-Allocation/: .gitignore  README.md
DataIngestion-Allocation/backend/: .env.example  demo rss server.py  demo.db  pyproject.toml
DataIngestion-Allocation/backend/data/: rss_feeds.json
DataIngestion-Allocation/backend/demo_data/: seed_incidents.json
DataIngestion-Allocation/backend/migrations/: 001_create_inventory.sql  002_seed_inventory.sql  003_rpc_deduct.sql  004_create_incidents_and_need_cards.sql  005_fix_inventory_schema.sql
DataIngestion-Allocation/backend/src/: __init__.py  agent.py  allocator.py  allocator_config.py  api.py  demo_db.py  discord_adapter.py  discord_listener.py  pending_store.py  rss_fetcher.py  tool_definitions.py  tools.py
DataIngestion-Allocation/backend/src/stores/: __init__.py  incidents.py  inventory.py  need_cards.py
DataIngestion-Allocation/frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
DataIngestion-Allocation/frontend/src/: App.jsx  index.css
Route-Optimizer/: .gitignore
Route-Optimizer/backend/: .env.example  database.py  main.py  models.py  requirements.txt
Route-Optimizer/backend/services/: ingestion.py  routing.py
Route-Optimizer/frontend/: index.html  package-lock.json  package.json
Route-Optimizer/supabase/: schema.sql
backend/: main.py  requirements.txt
backend/services/: allocator.py
frontend/: index.html  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
(+44 files in other folders)
