[project]
name = "venv"
version = "1.0.0"
description = "..."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "discord.py>=2.4.0",
    "exa-py>=2.12.1",
    "fastapi>=0.104.0",
    "feedparser>=6.0.12",
    "google-genai>=2.0.0",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.5",
    "requests>=2.33.1",
    "supabase>=2.30.0",
    "uvicorn>=0.24.0",
]
